force-app/main/default/objects/Asset_Finance_AMBIT_Credit_Line__x/Asset_Finance_AMBIT_Credit_Line__x.object-meta.xml
<CustomObject>
    <externalDataSource>Core_Banking_Data_Source</externalDataSource>
    <externalName>AFAMBITCreditLine</externalName>
    <label>Asset Finance AMBIT Credit Line</label>
    <pluralLabel>Asset Finance AMBIT Credit Lines</pluralLabel>
</CustomObject>