force-app/main/default/objects/Asset_Finance_AMBIT_Credit_Line__x/fields/Expires__c.field-meta.xml
<CustomField>
    <fullName>Expires__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Caps</complianceGroup>
    <description>Expiry Date</description>
    <externalDeveloperName>Expires</externalDeveloperName>
    <label>Expiry Date</label>
    <type>Date</type>
</CustomField>