force-app/main/default/objects/Asset_Finance_AMBIT_Credit_Line__x/fields/Limit__c.field-meta.xml
<CustomField>
    <fullName>Limit__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Caps</complianceGroup>
    <description>Total liability to ANZ</description>
    <externalDeveloperName>Limit</externalDeveloperName>
    <label>Limit ($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>