force-app/main/default/objects/Asset_Finance_AMBIT_Credit_Line__x/fields/Opened_Date__c.field-meta.xml
<CustomField>
    <fullName>Opened_Date__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source_EBD</complianceGroup>
    <description>The date the account record was established</description>
    <externalDeveloperName>OpenedDate</externalDeveloperName>
    <label>Date Opened</label>
    <type>Date</type>
</CustomField>